--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,9 +1,15 @@
+.container {
+  width: 25%;
+  padding: 0.2em;
+}
+
 .video {
   display: flex;
   flex-direction: column;
   border: 1px solid non;
   padding: 0 0.5em;
-  width: 25%;
+  width: 100%;
+  height: 100%;
   margin-top: 1em;
   margin-bottom: 0.1em;
   cursor: pointer;
