--- a/src/components/search_header/search_header.module.css
+++ b/src/components/search_header/search_header.module.css
@@ -13,12 +13,13 @@
   margin-right: 0.5rem;
   font-size: 0.6rem;
   background: transparent;
+  cursor: pointer;
 }
 
 .icon {
   margin-right: 1em;
   margin-left: 0.2em;
-  font-size: 2em;
+  font-size: 1.5em;
   background: transparent;
 }
 
@@ -43,6 +44,7 @@
   font-size: 1.3rem;
   padding: 0.3em;
   background-color: #121212;
+  color: white;
   border: none;
   outline: none;
   border-radius: 0.2em;
@@ -68,8 +70,9 @@
 }
 
 .icons {
-  margin-left: 16rem;
   background: transparent;
+  position: absolute;
+  right: 1rem;
 }
 
 .record,
