--- a/src/components/search_header/search_header.module.css
+++ b/src/components/search_header/search_header.module.css
@@ -1,17 +1,21 @@
 .header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   color: white;
   height: 5rem;
   padding: 1em;
 }
 
+.header_logo {
+  display: flex;
+  align-items: center;
+}
 .logo {
   display: flex;
   align-items: center;
   margin-right: 0.5rem;
   font-size: 0.6rem;
-  background: transparent;
   cursor: pointer;
 }
 
@@ -19,7 +23,6 @@
   margin-right: 1em;
   margin-left: 0.2em;
   font-size: 1.5em;
-  background: transparent;
 }
 
 .logoImg {
@@ -27,21 +30,16 @@
   margin-right: 0.2em;
   width: 2rem;
   height: 100%;
-  background: transparent;
-}
-
-.title {
-  background: transparent;
 }
 
 .button {
   font-size: 1em;
 }
 .input {
-  flex-basis: 40%;
-  margin-left: 11em;
+  flex-basis: 100%;
+  margin-left: 3em;
   font-size: 1.3rem;
-  padding: 0.3em;
+  padding: 0.4em;
   background-color: #121212;
   color: white;
   border: none;
@@ -51,27 +49,26 @@
 
 .searchButton {
   background-color: rgba(92, 89, 89, 0.54);
-  outline: none;
-  border: none;
+  margin-right: 0.5em;
 }
 
 .button {
-  height: 1.8rem;
-  padding: 0.5em 1.5em;
-  background: none;
+  height: 2rem;
+  padding: 0.5em 0.2em;
+  outline: none;
+  border: none;
   cursor: pointer;
+  background: none;
 }
 
 .micIcon {
   font-size: 1.5em;
-  margin: 0 0.5em;
   padding: 0 0.05em;
+  margin-right: 3rem;
 }
 
 .icons {
-  background: transparent;
-  position: absolute;
-  right: 1rem;
+  display: flex;
 }
 
 .record,
