--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,6 +1,7 @@
 .container {
   padding: 0.2em;
   margin-bottom: 0.2em;
+  background: #121212;
 }
 
 .container.grid {
@@ -19,9 +20,10 @@
   padding: 0 0.5em;
   width: 100%;
   height: 100%;
-  margin-bottom: 0.1em;
+  margin-bottom: 0.5em;
   cursor: pointer;
   transition: transform 250ms ease-in;
+  background: #121212;
 }
 
 .video.list {
@@ -38,13 +40,18 @@
 }
 
 .thumbnail.list {
-  width: 40%;
+  max-width: 8.75rem;
   height: 100%;
 }
 
 .metadata {
   display: flex;
   padding: 0 0.5em;
+  background: #121212;
+}
+
+.information {
+  margin: 0;
 }
 
 .profileImg {
@@ -62,11 +69,12 @@
   margin: 0;
   font-weight: 400;
   color: rgb(255, 255, 255);
+  background: #121212;
 }
 .channel {
   margin: 0;
-  margin-top: 0.1em;
   color: darkgray;
+  background: #121212;
 }
 
 .channel:hover {
