--- a/src/components/video_list/video_list.module.css
+++ b/src/components/video_list/video_list.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  padding: 0.4em;
   padding-left: 0;
   margin: 0;
+  background: #121212;
 }
