--- a/src/app.module.css
+++ b/src/app.module.css
@@ -11,3 +11,9 @@
   flex: 1 1 30%;
   margin-left: 1em;
 }
+
+@media screen and (max-width: 72rem) {
+  .content {
+    flex-direction: column;
+  }
+}
