--- a/src/components/video_detail/video_detail.module.css
+++ b/src/components/video_detail/video_detail.module.css
@@ -61,3 +61,9 @@
 .comment {
   color: rgb(219, 215, 215);
 }
+
+@media screen and (max-width: 72rem) {
+  .statistics {
+    font-size: 0.7em;
+  }
+}
